Refactor to type switch expressions.